@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- IGUIEnvironment::getNextElement now public (was only in CGUIEnvironment before).
 - Add an overwrite mode to editbox. Patch provided by Adam(aka kingadami).
 - Add IGUIImages::setDrawBounds/getDrawBounds to allow coding stuff like progress bars.
 - Add IGUIImages::setSourceRect/getSourceRect to allow using only parts of an image (can also be used to mirror and scroll them).
